// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`blocks and block combinators formats an ordinary block expression 1`] = `
"module Example {
  var count: int

  action initialize = {
    count' = 0
  }
}
"
`;

exports[`blocks and block combinators preserves a comment inside an ordinary block 1`] = `
"module Example {
  action step = {
    // Preserve this block comment.
    true
  }
}
"
`;

exports[`blocks and block combinators preserves a trailing comment on an ordinary block result 1`] = `
"module Example {
  pure def choose = if (true) {
    1  // chosen result
  } else {
    2
  }
}
"
`;

exports[`blocks and block combinators formats all block combinators 1`] = `
"module Example {
  var count: int

  action choose = any { count' = 1, count' = 2 }

  action advance = all { count >= 0, count' = count + 1 }

  pure val both = and { true, false }

  pure val either = or { false, true }
}
"
`;

exports[`blocks and block combinators preserves a compact block combinator 1`] = `
"module Example {
  action first = true
  action second = false
  action choose = any { first, second }
}
"
`;

exports[`blocks and block combinators preserves source-line groups in block combinators 1`] = `
"module Example {
  val groupedAll = all {
    true, true, true,
  }

  val groupedAny = any {
    true, false, true,
  }

  pure val groupedAnd = and {
    true, true, false,
  }

  pure val groupedOr = or {
    false, false, true,
  }

  pure val longGroup = and {
    "first deliberately long value for width testing" == "first deliberately long value for width testing",
    "second deliberately long value for width testing" == "second deliberately long value for width testing",
  }
}
"
`;

exports[`blocks and block combinators preserves a block combinator below a definition header 1`] = `
"module Example {
  var n: int

  action step =
    all {
      n' = n,
      n >= 0,
    }
}
"
`;

exports[`blocks and block combinators removes a blank line after a block combinator opening 1`] = `
[
  {
    "column": 1,
    "filePath": "input.qnt",
    "length": 1,
    "line": 3,
    "message": "expected block contents directly after the opening brace",
    "rule": "format/block-combinator-opening-gap",
    "sourceLine": "",
  },
]
`;

exports[`blocks and block combinators removes a blank line after a block combinator opening 2`] = `
"module Example {
  action choose = any {
    true,
    false,
  }
}
"
`;

exports[`blocks and block combinators preserves a comment inside a block combinator 1`] = `
"module Example {
  action step = all {
    // Preserve this conjunct comment.
    true,
  }
}
"
`;

exports[`blocks and block combinators preserves a trailing comment on a block combinator opening 1`] = `
"module Example {
  pure val valid = or { // describes the whole choice
    true,
    false,
  }
}
"
`;

exports[`blocks and block combinators preserves aligned trailing comments in a block combinator 1`] = `
"module Example {
  var first: int
  var second: int
  var third: int
  var fourth: int

  action init = all {
    first' = 1,  // First value
    second' = 2, // Second value
    third' = 3,  // Third value
    fourth' = 4,  // Fourth value
  }
}
"
`;

exports[`blocks and block combinators preserves a blank line between block combinator entries 1`] = `
"module Example {
  var n: int

  action step = all {
    n >= 0,

    n' = n + 1,
  }
}
"
`;
